--- a/code/less/icons.less
+++ b/code/less/icons.less
@@ -11,12 +11,29 @@
 }
 
 /* 16 > */
-.ico_type_login {
-	width:10px;
-	height:10px;
-	background-position:0 -306px;
+.ico_content_guide-s {
+	width:16px;
+	height:16px;
+	background-position:0 -289px;
 }
 
+.ico_content_view {
+	width:16px;
+	height:16px;
+	background-position:0 -36px;
+}
+
+.ico_content_comments {
+	width:16px;
+	height:16px;
+	background-position:0 0;
+}
+.ico_content_plus-w {
+   background-position:0 -72px;
+    height:17px;
+    margin-right: 8px;
+    width:15px;
+}
 
 /* 16 < */
 
@@ -62,6 +79,38 @@
     background-position:-18px -390px;
     height:22px;
     width:22px;
+}
+.ico_content_arrow-down {
+    background-position:-18px -286px;
+    height:11px;
+    width:18px;
+    .opacity(0.3);
+}
+.ico_content_guide-red {
+    background-position:-18px -260px;
+    height:18px;
+    width:16px;
+    margin-right:7px;
+}
+.ico_content_comments-s {
+   background-position:0 -90px;
+    height:13px;
+    width:12px;
+    margin-top:-4px;
+    .opacity(0.7);
+}
+.ico_content_arrow-up {
+    background-position:-18px -416px;
+    height:11px;
+    width:18px;
+}
+.ico_content_pencil {
+    background-position:0 -378px;
+    height:11px;
+    width:11px;
+     margin-right: 3px;
+    margin-top: -3px;
+    .opacity(0.7);
 }
 /* 24 < */
 
