--- a/code/less/forms.less
+++ b/code/less/forms.less
@@ -4,8 +4,22 @@ textarea,
 select {
     color: @color-body-text;
     font-family:@font-family-base;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 15px;
+    line-height: 21px;
+}
+
+
+.field {
+    background: #fff;
+    padding:15px;
+    height:20px;
+}
+.field_type_text {
+
+}
+
+.field_type_textarea {
+    resize:none;
 }
 
 
@@ -13,9 +27,93 @@ select {
     position:relative;
 }
 
+.form-fields,
+.form-fields__item {
+    list-style: none outside;
+    margin: 0;
+    padding: 0;
+}
+.form-fields__item {
+    margin-bottom: 10px;
+    position: relative;
+    clear: both;
+    display:block;
+    letter-spacing: normal;
+}
+
+.field-label {
+    color:#666666;
+    font-size:14px;
+    position:relative;
+    padding-right:10px;
+    margin-right: 9px;
+    letter-spacing: normal;
+}
+
+.form-fields_inline {
+    .form-fields__item {
+	display: inline-block;
+	margin:0;
+	vertical-align: top;
+
+	&:first-child {
+	    margin:0;
+	}
+    }
+}
+
+/* custom-field < */
+
+/* checkbox < */
+
+.form-field_chbox {
+    position:relative;
+    padding-left:21px;
+    line-height: 14px;
+    font-size:14px;
+}
+.field-box_radio {
+    position:relative;
+    padding-left:21px;
+    line-height: 14px;
+    font-size:14px;
+}
+
+.jq-checkbox {
+    background: #fff;
+    width:11px;
+    height: 11px;
+    border:1px solid #cecece;
+    left:0;
+    top:1px;
+    position: absolute;
+}
+.jq-checkbox.checked {
+    background: #fff url(../images/icons/check.svg) no-repeat 50% 50%;
+    background-size: 9px 7px;
+}
 
 
+/* selectbox < */
 
+.selectbox {
+    position:relative;
+    cursor: pointer;
+}
+.selectbox__dropdown {
+    background: #fff;
+    display: none;
+    top:37px;
+    position: absolute;
+    width:100%;
+    z-index: 20;
+}
+
+.field_selectbox {
+    cursor:pointer;
+    .ellipsis;
+}
+/* selectbox > */
 
 
 
@@ -24,23 +122,22 @@ select {
 .btn {
     color:#fff;
     cursor: pointer;
-    height: 27px;
+    height: 50px;
     display: inline-block;
-    font-size:14px;
     vertical-align: top;
-    line-height: 26px;
     position:relative;
     text-decoration: none;
     white-space: nowrap;
 
     .btn__in {
 	color:#fff;
-	.opacity(0.6);
+	.opacity(0.8);
 	cursor: pointer;
+	font:16px @font-family-narrow;
 	height: 100%;
-	line-height: 26px;
+	line-height: 50px;
 	display: inline-block;
-	padding:0 17%;
+	padding:0 25px;
 	vertical-align: top;
 	text-decoration: none;
 	text-align: center;
@@ -56,11 +153,10 @@ select {
 }
 
 
-
 input[type="submit"],
 input[type="button"] {
     cursor: pointer;
-    padding-top:4% !important;
+    padding-top:2% !important;
 }
 .btn_icon {
     .btn__in {
@@ -79,3 +175,21 @@ input[type="button"] {
     }
 
 /* buttons > */
+
+/* form comment < */
+
+.form_comment {
+    background:#fff;
+
+    .btn {
+	position:absolute;
+	top:0;
+	right:0;
+    }
+
+    .field_type_text {
+	width:560px;
+    }
+}
+
+/* form comment > */
