--- a/code/less/layout.less
+++ b/code/less/layout.less
@@ -53,8 +53,9 @@ h2, h3 { font-size:21px;}
 
 /* Content styles < */
 .text-block {
-    font-size:13px;
-    line-height:18px;
+    font-size:17px;
+    line-height:26px;
+
     h2, h3 {
 	margin-bottom:15px;
     }
@@ -69,7 +70,7 @@ h2, h3 { font-size:21px;}
 	list-style:disc;
     }
     p {
-	margin-bottom:18px;
+	margin-bottom:15px;
     }
 }
 /* Content styles > */
@@ -97,6 +98,9 @@ h2, h3 { font-size:21px;}
 .sidebar {
     float: right;
     width:300px;
+}
+.article {
+    padding:29px 50px 25px 0;
 }
 
 /*  layout > */
@@ -162,7 +166,7 @@ h2, h3 { font-size:21px;}
 .nav {
     clear: both;
 
-    .menu-item-title {	
+    .menu-item-title {
 	color:#fff;
 	cursor:pointer;
 	font-weight:normal;
@@ -302,10 +306,10 @@ h2, h3 { font-size:21px;}
     }
 
     .menu_sub  {
-	display: none;	
+	display: none;
 	overflow:hidden;
 	width:390px;
-	
+
 	.menu__item {
 	    float:left;
 	    margin:0;
